tests/baselines/reference/classExtendsEveryObjectType.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(4,17): error TS2304: Cannot find name 'I'.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,18): error TS2507: Base expression is not of a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,25): error TS2304: Cannot find name 'string'.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(6,31): error TS1005: ',' expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(8,18): error TS2507: Base expression is not of a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(11,18): error TS2507: Base expression is not of a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(14,18): error TS2507: Base expression is not of a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts(16,18): error TS2507: Base expression is not of a constructor function type.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType.ts (8 errors) ====
    interface I {
        foo: string;
    }
    class C extends I { } // error
                    ~
!!! error TS2304: Cannot find name 'I'.
    
    class C2 extends { foo: string; } { } // error
                     ~~~~~~~~~~~~~~~~
!!! error TS2507: Base expression is not of a constructor function type.
                            ~~~~~~
!!! error TS2304: Cannot find name 'string'.
                                  ~
!!! error TS1005: ',' expected.
    var x: { foo: string; }
    class C3 extends x { } // error
                     ~
!!! error TS2507: Base expression is not of a constructor function type.
    
    module M { export var x = 1; }
    class C4 extends M { } // error
                     ~
!!! error TS2507: Base expression is not of a constructor function type.
    
    function foo() { }
    class C5 extends foo { } // error
                     ~~~
!!! error TS2507: Base expression is not of a constructor function type.
    
    class C6 extends []{ } // error
                     ~~
!!! error TS2507: Base expression is not of a constructor function type.